# Corona_Sim

./: CMakeLists.txt
res/: basic_shader.frag  basic_shader.vert
src/: AStar.hpp  CMakeLists.txt  PathResult.hpp  PathingNode.hpp  glm_serialize.hpp  main.cpp  person.hpp  world.cpp  world.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.hpp
src/SimManager/: SimManager.cpp  SimManager.hpp
